feat(api): transfer torrents between instances
